working, but kludgy "Rayleigh" module layout

--- a/examples/shtns-wrapper/GNUmakefile
+++ b/examples/shtns-wrapper/GNUmakefile
@@ -2,9 +2,13 @@
 src_dirs := src ../../utilities
 skip_modules := iso_c_binding iso_fortran_env
 
+# this is actually used
 build_probin := t
 
-build_info :=
+# this is not strictly used, but codes in ../../utilities do use it
+# and I'm too lazy to remove them from the GPackage.mak file, because
+# they are used in other test/example cases.
+build_info := t
 
 exe_base := main
 
