I think this fixes the third-party makefile system (does not affect anything else)

--- a/serial-wrapper/GNUmakefile
+++ b/serial-wrapper/GNUmakefile
@@ -5,23 +5,24 @@
 #   debug        -- compile with debugging flags
 #   f90_compiler -- what compiler to use [intel or gfortran]
 shtns :=
-debug :=
+debug := t
 f90_compiler := gfortran
 
 #################################################################
 
 # what to build, what to ignore
-src_dirs := src ../utilities
+src_dirs := src
 skip_modules := iso_c_binding iso_fortran_env
-build_probin := t
-build_info := t
+find_GPackage_files := t
+build_probin :=
+build_info :=
 
 exe_base := main
 
 OMP := t
 
 # compiler-dependent preprocessor stuff
-ifeq ($(f90_compiler), intel)
+ifeq ($(findstring intel, $(f90_compiler)), intel)
   xtr_f90_flags := -DINTEL_COMPILER -fpp
   pp_macros := INTEL_COMPILER=1
 else
@@ -41,8 +42,12 @@ SHT_LIB := -L$(SHT_PREFIX)/lib -lfftw3_omp -lfftw3 -lm -lshtns_omp
 DGEMM_INC := -I$(MKLROOT)/include
 DGEMM_LIB := -L$(MKLROOT)/lib/intel64 -lmkl_intel_ilp64 -lmkl_sequential -lmkl_core
 
-include_flags := $(SHT_INC) $(DGEMM_INC)
-library_flags := $(SHT_LIB) $(DGEMM_LIB)
+include_flags := $(DGEMM_INC)
+library_flags := $(DGEMM_LIB)
+ifdef shtns
+  include_flags += $(SHT_INC)
+  library_flags += $(SHT_LIB)
+endif
 
 # main makefile stuff
 MAKEFILE_HOME_DIR := $(HOME)/Programs/FortranDep/Makefiles
