rework build system and bring it up-to-date with correct flags

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@
 ######################
 Notes/various_notes.pdf
 
+######################
+# Machine dependent makefile utility
+######################
+serial*/makefile_SHT_prefix
