--- a/serial-wrapper/makefile_dependencies
+++ b/serial-wrapper/makefile_dependencies
@@ -4,11 +4,14 @@
 
 # object list
 ifdef shtns
-  objs := Structures.o Legendre_Polynomials.o cheb_grids.o probin.o Legendre_Transforms_SHTns.o test_suite.o main.o
+  objs := Structures.o Legendre_Polynomials.o cheb_grids.o probin.o timing.o Legendre_Transforms_SHTns.o test_suite.o main.o
 else
-  objs := Structures.o Legendre_Polynomials.o cheb_grids.o probin.o Legendre_Transforms.o test_suite.o main.o
+  objs := Structures.o Legendre_Polynomials.o cheb_grids.o probin.o timing.o Legendre_Transforms.o test_suite.o main.o
 endif
 objects := $(addprefix $(odir)/, $(objs))
+
+# src/timing.f90
+_build/o/timing.o : src/timing.f90
 
 # src/Structures.F90
 _build/o/Structures.o : src/Structures.F90
@@ -40,6 +43,7 @@ endif
 _build/o/test_suite.o : _build/o/Legendre_Polynomials.o
 _build/o/test_suite.o : _build/o/Structures.o
 _build/o/test_suite.o : _build/o/cheb_grids.o
+_build/o/test_suite.o : _build/o/timing.o
 _build/o/test_suite.o : src/test_suite.f90
 
 # src/main.f90
@@ -48,6 +52,7 @@ _build/o/main.o : _build/o/Legendre_Transforms_SHTns.o
 endif
 _build/o/main.o : _build/o/Legendre_Polynomials.o
 _build/o/main.o : _build/o/cheb_grids.o
+_build/o/main.o : _build/o/timing.o
 _build/o/main.o : _build/o/probin.o
 _build/o/main.o : _build/o/test_suite.o
 _build/o/main.o : src/main.f90
