theta_contiguous seems to work now???

--- a/examples/website-example/GNUmakefile
+++ b/examples/website-example/GNUmakefile
@@ -1,22 +1,22 @@
 
-src_dirs := src ../../utilities
+src_dirs := src
 skip_modules := iso_c_binding iso_fortran_env
 
-build_probin := t
+build_probin :=
 
-build_info := t
+build_info :=
 
 exe_base := sht
 
 debug :=
 
-f90_compiler := gfortran
+f90_compiler := intel
 
 f90_flags :=
 OMP := t
 
 xtr_f90_flags :=
-SHT_PREFIX := $(HOME)/cueball/local-software/SHTns
+SHT_PREFIX := $(HOME)/cueball/local-software/SHTns/icc-built
 include_flags := -I$(SHT_PREFIX)/include
 library_flags := -L$(SHT_PREFIX)/lib -lfftw3_omp -lfftw3 -lm -lshtns_omp
 
